# src/main/java/dk/jamesbabz/madkursus/service/models/PlannedRecipeStatus.java
@@ -1,0 +1,2 @@
+package dk.jamesbabz.madkursus.service.models;
+public enum PlannedRecipeStatus { PLANNED, COOKED, SKIPPED }
